Adicionado o usuário que criou o post e também foi refatorado algumas partes da aplicação

--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/.",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node -r esm ./node_modules/.bin/lab"
   },
   "author": "Gabriel Borges <gabrielborc@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "@hapi/boom": "^8.0.1",
+    "@hapi/code": "^7.0.0",
     "@hapi/hapi": "^18.4.0",
     "@hapi/joi": "^16.1.7",
+    "@hapi/lab": "^21.0.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
